tests/unit/default/syntax-error/028-create-table-parens-name-colon-type-parens-num-comma.x.t
---- IN ----
+%table(id:decimal(10,|
---- OUT ----
---- ERR ----
syntax: expected `)` after `...%table(id:decimal(10` near `,|` at position 21 - at line 1
---- EXIT ----
1
